fixed the email form alignment by changing the close button to a link tag only

--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -181,7 +181,7 @@ a {
 }
 
 .close {
-  font-weight: bold;
+  font-weight: lighter;
   float: right;
   display: inline;
   padding: 1%;
